@@ -1,3 +1,11 @@
+2002-06-19  Deepa Natarajan  <deepa.natarajan@wipro.com>
+
+	* actions.c: Change the windows to dialog boxes. Set
+     	atk relation between entry box and label, set mnemonics,
+     	set default button, change title of dialog to "Actions",
+     	position buttons to the right of the tree view. 
+     	s/gtk_widget_set_usize/gtk_widget_set_size_request.
+
 2002-06-12  Narayana Pattipati <narayana.pattipati@wipro.com>
 
         * monitor.c: In mon_read_new_lines function, as new lines are read,
